2005/10/26 -- released version 20051026_trunk

2005/10/25 -- released version 20051025_trunk

2005/10/24 -- released version 20051024_trunk

2005/10/23 -- released version 20051023_trunk

2005/10/22 -- released version 20051022_trunk

2005/10/21 -- released version 20051021_trunk

2005/10/20 -- released version 20051020_trunk

* make the Curl probe compatible with Perl 5.6
  -- niko, reported by Ben Eisenbraun <bene *klatsch.org>

2005/10/19 -- released version 20051019_trunk

* get rid of 'Use of uninitialized value' messages when using the Avgratio matcher
  and 'edgetrigger' -- niko, reported by John L Hoo <jhoo *antapex.ca>

2005/10/18 -- released version 20051018_trunk

2005/10/17 -- released version 20051017_trunk

2005/10/16 -- released version 20051016_trunk

2005/10/15 -- released version 20051015_trunk

* include the smallest ping value in the graphs too
  -- niko, from ChunjingHan <chjhan *cstnet.cn>

2005/10/14 -- released version 20051014_trunk

2005/10/13 -- released version 20051013_trunk

2005/10/12 -- released version 20051012_trunk

* avoid creating new RRD files as the user running 'smokeping --reload'
  -- niko, reported by Stefan Schmidt <s.schmidt *mcbone.net>, 
  http://bugs.debian.org/333373

2005/10/11 -- released version 20051011_trunk

2005/10/10 -- released version 20051010_trunk

2005/10/9 -- released version 20051009_trunk

2005/10/8 -- released version 20051008_trunk

* only warn if RRA parameters other than CF are different
  in the config file and an RRD -- niko, for Javier Oviedo <joviedo *plcendesa.com>

2005/10/7 -- released version 20051007_trunk

2005/10/6 -- released version 20051006_trunk

2005/10/5 -- released version 20051005_trunk

2005/10/4 -- released version 20051004_trunk

* make it work (hopefully) with even older versions of CGI::Carp if
  'changecgiprogramname' is set to 'no' in the General section
  -- niko

2005/10/3 -- released version 20051003_trunk

2005/10/2 -- released version 20051002_trunk
