@@ -1,3 +1,5 @@
+2005/10/27 -- released version 20051027_trunk
+
 2005/10/26 -- released version 20051026_trunk
 
 2005/10/25 -- released version 20051025_trunk
